--- a/valetudo/deployment/valetudo.conf
+++ b/valetudo/deployment/valetudo.conf
@@ -5,7 +5,8 @@ start on started network-interface INTERFACE=wlan0
 stop on runlevel [06]
 
 oom score 1000
-exec VALETUDO_CONFIG_PATH=/mnt/data/valetudo_config.json /usr/local/bin/valetudo
+env VALETUDO_CONFIG_PATH=/mnt/data/valetudo_config.json
+exec /usr/local/bin/valetudo
 respawn
 respawn limit 10 90
 limit as 209715200 209715200
